Little change in css.
(cherry picked from commit bb333e1c7cb40caef648b70fa8e9a7f2edbed77e)

--- a/JavaWeb/web/main.html
+++ b/JavaWeb/web/main.html
@@ -63,7 +63,7 @@
 								<el-col :span="10">
 									<el-card shadow="always">
 										<label>where have u been</label>
-										<label style="font-size: 12px; float: right;">23:55</label>
+										<label style="font-size: 12px; float: right; margin-top: 10px;">23:55</label>
 									</el-card>
 								</el-col>							
 							</el-row>
