--- a/JavaWeb/web/sign_in.html
+++ b/JavaWeb/web/sign_in.html
@@ -44,7 +44,7 @@
 				  <!--Todo: sign-in function-->
 			  },
 			  onSignUp() {
-				  <!--Todo: sign-up function-->
+				  window.location.href='./sign_up.html';
 			  }
 		  }
 	    })
